--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "magic-patterns-vite-template",
+  "name": "movie-discovery",
   "version": "0.0.1",
   "private": true,
   "type": "module",
+  "homepage": "https://okayabhijit.github.io/moviediscovery",
+
   "scripts": {
     "dev": "npx vite",
     "build": "npx vite build",
@@ -12,7 +14,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --maxWorkers=2 --silent --detectOpenHandles --forceExit",
-    "validate": "npm-run-all --parallel test:ci lint build"
+    "validate": "npm-run-all --parallel test:ci lint build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist -u \"github-actions-bot <support+actions@github.com>\" -r https://x-access-token:${GITHUB_TOKEN}@github.com/okayabhijit/moviediscovery.git"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -39,6 +43,7 @@
     "eslint": "^8.50.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "gh-pages": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
