--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,12 @@ jobs:
         run: npm test -- --watchAll=false
 
       - name: Build app
-        run: npm run build
+        run: npm run 
+        
+      - name: Configure Git User
+        run: |
+          git config --global user.name "github-actions-bot"
+          git config --global user.email "support+actions@github.com"
 
       - name: Deploy to GitHub Pages
         run: |
