--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "type": "module",
   "homepage": "https://okayabhijit.github.io/moviediscovery",
-
   "scripts": {
     "dev": "npx vite",
     "build": "npx vite build",
@@ -48,6 +47,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "latest",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "3.4.17",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
